add apis kpi
